<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="PRG_CASE_InitialiseDataManual" Id="{9d983551-81c2-4987-8957-1c8f757bfb69}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_CASE_InitialiseDataManual
VAR
	fbCase_InitialiseData		: FB_CASE_InitialiseData;
	
	(* Iterator for Init function/method *)
	nOuterIndex				: INT;
	nPackIndex				: INT;
	rTrigDataInit			: R_TRIG;
	bDataInit				: BOOL;
	
	(* Inputs *)	
	bExecute 				: BOOL;	(* set TRUE to move Outers *)
	stCTDateTime			: ST_SYSTEM_DateTime;
	stDoorGuardReject		: ST_RejectItems;
	
	
	(* In/Out *)
	stProductInstruction	: ST_PCM_Status := (sFieldName := 'dupa', nOutersPerCase := 50);
	stCACData 				: ST_CAC_Data;	(* Case Queue *)
	
	(* Outputs *)
	bDone					: BOOL;
	bBusy					: BOOL;
	bDoorReject				: BOOL;
	sRejectCode				: T_MaxString;		
	nMasterListCounter		: INT;	
	bCheckDuplicates		: BOOL;
	
END_VAR
]]></Declaration>
    <Implementation>
      <NWL>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="NWLImplementationObject">
              <v n="NetworkListComment">""</v>
              <v n="DefaultViewMode">"Fbd"</v>
              <l2 n="NetworkList" cet="Network">
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeBox">
                    <o>
                      <v n="BoxType">"Init"</v>
                      <o n="Instance" t="Operand">
                        <n n="Operand" />
                        <v n="Type">""</v>
                        <v n="Comment">""</v>
                        <v n="SymbolComment">""</v>
                        <v n="Address">""</v>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <v n="LValue">false</v>
                        <v n="Boolean">false</v>
                        <v n="IsInstance">true</v>
                        <v n="Id">57L</v>
                      </o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" />
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <n n="InputFlags" />
                      <l2 n="InputItems" />
                      <o n="InputParam" t="ParamList">
                        <l2 n="Names" />
                        <l2 n="Types" />
                      </o>
                      <o n="OutputParam" t="ParamList">
                        <l2 n="Names" />
                        <l2 n="Types" />
                      </o>
                      <v n="CallType" t="Operator">Action</v>
                      <v n="EN">false</v>
                      <v n="ENO">false</v>
                      <n n="STSnippet" />
                      <v n="ContainsExtensibleInputs">false</v>
                      <v n="ProvidesSTSnippet">false</v>
                      <v n="Id">58L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">50L</v>
                </o>
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeBox">
                    <o>
                      <v n="BoxType">"FB_CASE_InitialiseData"</v>
                      <o n="Instance" t="Operand">
                        <v n="Operand">"fbCase_InitialiseData"</v>
                        <v n="Type">"FB_CASE_InitialiseData"</v>
                        <v n="Comment">""</v>
                        <v n="SymbolComment">""</v>
                        <v n="Address">""</v>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <v n="LValue">false</v>
                        <v n="Boolean">false</v>
                        <v n="IsInstance">true</v>
                        <v n="Id">37L</v>
                      </o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <n />
                          <o>
                            <v n="Operand">"bBusy"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">39L</v>
                          </o>
                          <o>
                            <v n="Operand">"bDoorReject"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">40L</v>
                          </o>
                          <o>
                            <v n="Operand">"sRejectCode"</v>
                            <v n="Type">"T_MaxString"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">41L</v>
                          </o>
                          <o>
                            <v n="Operand">"nMasterListCounter"</v>
                            <v n="Type">"INT"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">42L</v>
                          </o>
                          <o>
                            <v n="Operand">"bCheckDuplicates"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">43L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">true</v>
                        <v n="Extensible">false</v>
                      </o>
                      <n n="InputFlags" />
                      <l2 n="InputItems" cet="BoxTreeOperand">
                        <o>
                          <o n="Operand" t="Operand">
                            <v n="Operand">"bExecute"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">34L</v>
                          </o>
                          <v n="Id">33L</v>
                        </o>
                        <o>
                          <o n="Operand" t="Operand">
                            <v n="Operand">"stCTDateTime"</v>
                            <v n="Type">"ST_SYSTEM_DateTime"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">36L</v>
                          </o>
                          <v n="Id">35L</v>
                        </o>
                        <o>
                          <o n="Operand" t="Operand">
                            <v n="Operand">"stDoorGuardReject"</v>
                            <v n="Type">"ST_RejectItems"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">45L</v>
                          </o>
                          <v n="Id">44L</v>
                        </o>
                        <o>
                          <o n="Operand" t="Operand">
                            <v n="Operand">"stProductInstruction"</v>
                            <v n="Type">"ST_PCM_Status"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">47L</v>
                          </o>
                          <v n="Id">46L</v>
                        </o>
                        <o>
                          <o n="Operand" t="Operand">
                            <v n="Operand">"stCACData"</v>
                            <v n="Type">"ST_CAC_Data"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">49L</v>
                          </o>
                          <v n="Id">48L</v>
                        </o>
                      </l2>
                      <o n="InputParam" t="ParamList">
                        <l2 n="Names" cet="String">
                          <v>bExecute</v>
                          <v>stCTDateTime</v>
                          <v>stDoorGuardReject</v>
                          <v>stProductInstruction</v>
                          <v>stCACData</v>
                        </l2>
                        <l2 n="Types" cet="String">
                          <v>BOOL</v>
                          <v>ST_SYSTEM_DateTime</v>
                          <v>ST_RejectItems</v>
                          <v>ST_PCM_Status[REF]</v>
                          <v>ST_CAC_Data[REF]</v>
                        </l2>
                      </o>
                      <o n="OutputParam" t="ParamList">
                        <l2 n="Names" cet="String">
                          <v>bDone</v>
                          <v>bBusy</v>
                          <v>bDoorReject</v>
                          <v>sRejectCode</v>
                          <v>nMasterListCounter</v>
                          <v>bCheckDuplicates</v>
                        </l2>
                        <l2 n="Types" cet="String">
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>T_MaxString</v>
                          <v>INT</v>
                          <v>BOOL</v>
                        </l2>
                      </o>
                      <v n="CallType" t="Operator">FunctionBlock</v>
                      <v n="EN">false</v>
                      <v n="ENO">false</v>
                      <n n="STSnippet" />
                      <v n="ContainsExtensibleInputs">false</v>
                      <v n="ProvidesSTSnippet">false</v>
                      <v n="Id">38L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">5L</v>
                </o>
              </l2>
              <v n="BranchCounter">0</v>
              <v n="ValidIds">true</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
            <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
            <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
            <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
            <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
            <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
            <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
            <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </NWL>
    </Implementation>
    <Action Name="Init" Id="{cfa3d2a8-acd0-4495-8661-28cac742514f}">
      <Implementation>
        <ST><![CDATA[
rTrigDataInit(CLK := bDataInit);

IF rTrigDataInit.Q THEN
	
	MEMSET(ADR(stCACData), 16#00, SIZEOF(stCACData));	
	
	stProductInstruction.nOutersPerCase 	:= 50;
	stProductInstruction.nPacksPerOuter		:= 10;
	stProductInstruction.nOpMode			:= 11;
	stProductInstruction.sRetailSKU			:= '1234567';
	stProductInstruction.nAcceptanceLevel 	:= 10;


	stCACData.NumberOfOuters			:= stProductInstruction.nOutersPerCase;
	stCACData.CodingAndTrackingMode		:= stProductInstruction.nOpMode;
	stCACData.RetailSKU					:= stProductInstruction.sRetailSKU;

	FOR nOuterIndex := 1 TO stProductInstruction.nOutersPerCase BY 1 DO
	
	stCACData.Outer[nOuterIndex].Barcode 					:= CONCAT('OUTER_', INT_TO_STRING(nOuterIndex));
	stCACData.Outer[nOuterIndex].NumberOfPacks 				:= stProductInstruction.nPacksPerOuter;
	stCACData.Outer[nOuterIndex].NumberOfLinkedPacks 		:= stProductInstruction.nPacksPerOuter;
	stCACData.Outer[nOuterIndex].AcceptanceLevel 			:= stProductInstruction.nAcceptanceLevel;
	stCACData.Outer[nOuterIndex].CodingAndTrackingMode		:= stProductInstruction.nOpMode;
	stCACData.Outer[nOuterIndex].OuterRejectCode			:= 'OK';
	
		FOR  nPackIndex :=1 TO stProductInstruction.nPacksPerOuter BY 1 DO
			stCACData.Outer[nOuterIndex].PackCode[nPackIndex] 		:= F_CONCAT3(stCACData.Outer[nOuterIndex].Barcode,'_PACK_', INT_TO_STRING(nPackIndex));
			IF nPackIndex = 1 THEN
				stCACData.Outer[nOuterIndex].AggregationCodes[1]	:= stCACData.Outer[nOuterIndex].PackCode[nPackIndex];
			END_IF
			IF nPackIndex = 2 THEN
				stCACData.Outer[nOuterIndex].AggregationCodes[2]	:= stCACData.Outer[nOuterIndex].PackCode[nPackIndex];
			END_IF
			stCACData.Outer[nOuterIndex].PackCodeStatus[nPackIndex].5 	:= TRUE;
			stCACData.Outer[nOuterIndex].PackRejectCode[nPackIndex]		:= 'OK';
		END_FOR
	END_FOR	
	
	stCACData.Outer[3].OuterCodeStatus.5 	:= TRUE;
	stCACData.Outer[4].OuterCodeStatus.5	:= TRUE;
	
END_IF
]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>